Fix photo alignment

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,6 +20,10 @@ body {}
     background: #ddd;
 }
 
+.photos-summary .featured {
+  margin: 1px;
+}
+
 ul.image-gallery {
   display: flex;
   flex-wrap: wrap;
